<resources>
    <string name="app_name">Calculator</string>
    <string name="button_delete">Delete</string>
    <string name="n_7">7</string>
    <string name="n_8">8</string>
    <string name="n_9">9</string>
    <string name="o_divide">/</string>
    <string name="n_4">4</string>
    <string name="n_5">5</string>
    <string name="o_multiple">*</string>
    <string name="n_1">1</string>
    <string name="o_plus">+</string>
    <string name="o_minus">-</string>
    <string name="o_equals">=</string>
    <string name="n_6">6</string>
    <string name="n_2">2</string>
    <string name="n_3">3</string>
    <string name="o_point">.</string>
    <string name="n_0">0</string>
</resources>
