<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/background_dark"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/Edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:textColor="@android:color/white"
        android:textSize="50sp">

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_weight="1"
            android:backgroundTint="#202020"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:backgroundTint="#202020"
            android:text="@string/button_delete"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_seven"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#444541"
            android:padding="30dp"
            android:textColor="@android:color/white"
            android:text="@string/n_7"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/button_eight"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:backgroundTint="#444541"
            android:textColor="@android:color/white"
            android:text="@string/n_8"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/button_nine"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:backgroundTint="#444541"
            android:textColor="@android:color/white"
            android:text="@string/n_9"
            android:textSize="30sp" />
        <Button
            android:id="@+id/button_divide"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:backgroundTint="#202020"
            android:textColor="@android:color/white"
            android:text="@string/o_divide"
            android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_four"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:textColor="@android:color/white"
            android:backgroundTint="#444541"
            android:text="@string/n_4"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/button_five"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:textColor="@android:color/white"
            android:backgroundTint="#444541"
            android:text="@string/n_5"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/button_six"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:textColor="@android:color/white"
            android:backgroundTint="#444541"
            android:text="@string/n_6"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/button_multiple"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:textColor="@android:color/white"
            android:backgroundTint="#202020"
            android:text="@string/o_multiple"
            android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_one"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:textColor="@android:color/white"
            android:backgroundTint="#444541"
            android:text="@string/n_1"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/button_two"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:textColor="@android:color/white"
            android:backgroundTint="#444541"
            android:text="@string/n_2"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/button_three"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:textColor="@android:color/white"
            android:backgroundTint="#444541"
            android:text="@string/n_3"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/button_minus"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:textColor="@android:color/white"
            android:backgroundTint="#202020"
            android:text="@string/o_minus"
            android:textSize="32sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_point"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:textColor="@android:color/white"
            android:backgroundTint="#444541"
            android:text="@string/o_point"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/button_zero"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:textColor="@android:color/white"
            android:backgroundTint="#444541"
            android:text="@string/n_0"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/button_equals"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:textColor="@android:color/white"
            android:backgroundTint="#444541"
            android:text="@string/o_equals"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/button_plus"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:textColor="@android:color/white"
            android:backgroundTint="#202020"
            android:text="@string/o_plus"
            android:textSize="30sp"/>
    </LinearLayout>

</LinearLayout>